--- a/anvio/workflows/ecophylo/Snakefile
+++ b/anvio/workflows/ecophylo/Snakefile
@@ -164,8 +164,7 @@ rule filter_hmm_hits_by_model_coverage:
     """Remove weak hmm hits using model alignment coverage filter"""
 
     version: 1.0
-    log:
-        log = os.path.join(dirs_dict['LOGS_DIR'], "filter_hmm_hits_by_model_coverage-{sample_name}-{hmm_source}.log")
+    log: os.path.join(dirs_dict['LOGS_DIR'], "filter_hmm_hits_by_model_coverage-{sample_name}-{hmm_source}.log")
     input:
         #done = ancient(rules.anvi_run_hmms_hmmsearch.output.done),
         hmm_hits = ancient(rules.anvi_run_hmms_hmmsearch.output.hmm_hits)
@@ -214,7 +213,7 @@ rule filter_hmm_hits_by_model_coverage:
         else:
             no_hmm_hits_string = f"The hmm source {hmm_source} was not found in the hmm_hits of the contigs_db: {contigs_db}"
             print(no_hmm_hits_string)
-            with open(log.log, "w") as logfile:
+            with open(log, "w") as logfile:
                 logfile.write(no_hmm_hits_string)
 
         # Get hmm_hits.txt
@@ -229,8 +228,7 @@ rule process_hmm_hits:
     """
 
     version: 1.0
-    log:
-        log = os.path.join(dirs_dict['LOGS_DIR'], "process_hmm_hits-{sample_name}-{hmm_source}-{hmm_name}.log")
+    log: os.path.join(dirs_dict['LOGS_DIR'], "process_hmm_hits-{sample_name}-{hmm_source}-{hmm_name}.log")
     input:
         done = ancient(rules.filter_hmm_hits_by_model_coverage.output.done),
     output:
