--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ dependencies = [
     "biopython",
     "reportlab",
     "pymupdf",
-    "tomli==2.2.1"
+    "tomli==2.2.1",
     "jupyterlab",
     "jupyterlab-git",
     "jupyterlab-lsp",
