--- a/anvio/data/misc/PEOPLE/DEVELOPERS.yaml
+++ b/anvio/data/misc/PEOPLE/DEVELOPERS.yaml
@@ -65,7 +65,7 @@
       inst_link: https://hifmb.de
       current: true
     - title: Associate Junior Fellow
-      inst: Institute for Advanced Study
+      inst: Hanse-Wissenschaftskolleg, Institute for Advanced Study
       inst_link: https://hanse-ias.de/en/
       current: true
     - title: Post-doctoral Scientist
@@ -174,7 +174,7 @@
       inst_link: https://hifmb.de
       current: true
     - title: Associate Junior Fellow
-      inst: Institute for Advanced Study
+      inst: Hanse-Wissenschaftskolleg, Institute for Advanced Study
       inst_link: https://hanse-ias.de/en/
       current: true
     - title: Graduate Student
