add project script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -179,6 +179,7 @@ Contact = "https://anvio.org/people"
 "anvi-import-taxonomy-for-layers"                   = "anvio.cli.import_taxonomy_for_layers:main"
 "anvi-init-bam"                                     = "anvio.cli.init_bam:main"
 "anvi-inspect"                                      = "anvio.cli.inspect:main"
+"anvi-integrate-trnaseq"                            = "anvio.cli.integrate_trnaseq:main"
 "anvi-interactive"                                  = "anvio.cli.interactive:main"
 "anvi-matrix-to-newick"                             = "anvio.cli.matrix_to_newick:main"
 "anvi-mcg-classifier"                               = "anvio.cli.mcg_classifier:main"
