--- a/anvio/data/misc/PEOPLE/CONTRIBUTORS.yaml
+++ b/anvio/data/misc/PEOPLE/CONTRIBUTORS.yaml
@@ -273,7 +273,7 @@
       inst_link: https://www.biostat.washington.edu/
       current: true
 
-- gitHub: svteichman
+- github: svteichman
   name: Sarah Teichman
   email: teichs@uw.edu
   git_records:
