Add git_records for Sarah Tucker

--- a/anvio/data/misc/PEOPLE/CONTRIBUTORS.yaml
+++ b/anvio/data/misc/PEOPLE/CONTRIBUTORS.yaml
@@ -290,6 +290,8 @@
   web: https://sarahjtucker.com/
   avatar: tucker4.jpeg
   email: stucker@mbl.edu
+  git_records:
+    - tucker4@hawaii.edu
   linkedin: sarah-j-tucker-0a9591a2
   orcid: 0000-0003-0541-0853
   bio: "I am a marine microbiologist interested in the genomic, metabolic, and physiological diversity of microorganisms and how this diversity impacts ecological interactions and ocean processes."
