Joseph Nesme added to DEVELOPERS.yaml

--- a/anvio/data/misc/PEOPLE/DEVELOPERS.yaml
+++ b/anvio/data/misc/PEOPLE/DEVELOPERS.yaml
@@ -646,3 +646,16 @@
       inst: Boston University
       inst_link: https://www.bu.edu/biology/
       current: true
+
+- github: jnesme
+  name: Joseph Nesme
+  avatar: jnesme-anvio.png
+  email: jnesme@gmail.com
+  linkedin: joseph-nesme-66946892
+  orcid: 0000-0003-1929-5040
+  bio: "Microbial ecologist studying plasmid diversity in the environment"
+  affiliations:
+    - title: Senior Researcher
+      inst: DTU Bioengineering
+      inst_link: https://cemist.dtu.dk/
+      current: true
